syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/permissions";
//import "accounts/v1alpha1/accounts.proto";

package accounts.v1alpha1.permissions.v1;


/*
    Requests
*/
message ListPermissionRequest{
    //string type = 1;
}

message CreatePermissionRequest {
    string name = 1;
    string type = 2;
    string category = 3;
    string action = 4;

}

message UpdatePermissionRequest {
    uint32 permission_id = 1;
    string name = 2;
    string type = 3;
}   

message GetOnePermissionRequest {
    uint32 permission_id = 1;
}

message GetOnePermissionResponse {
    uint32 id = 1;
    string name = 2;
    string type = 3;
}

message DeletePermissionRequest {
    uint32 permission_id = 1;
}
/*
    Responses
*/
message UpdatePermissionResponse {
    string msg = 1;
    string error = 2;
}   

message DeletePermissionResponse {
    string msg = 1;
    string error = 2;
}

message CreatePermissionResponse {
    string msg = 1;
    string error = 2;
}

message ListPermissionResponse {
    repeated CategoryPermission categories_permissions = 1;
}

message AssignPermissionRequest {
    uint32 user_id = 1;
    uint32 permission_id = 2;
}



message GroupPermission {
    string name = 1;
    repeated Permission permissions = 3;
}
message CategoryPermission {
    string name = 1;
    string type = 2;
    repeated GroupPermission group_permissions = 3;
}
